// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PositioningPopup /> renders correctly with arrow 1`] = `
<PositioningPopup
  withArrow={true}
>
  <div
    className="popup-wrap"
    style={
      Object {
        "left": 20,
        "top": "100%",
      }
    }
  >
    <PopupArrow
      className="arrow-base"
      color="white"
      direction="top"
      position={
        Object {
          "left": 5,
        }
      }
      shadow={true}
    >
      <span
        className="base white arrow-base top shadow shadow-top"
        style={
          Object {
            "left": 5,
          }
        }
      />
    </PopupArrow>
    <Popup>
      <div
        className="popup"
      />
    </Popup>
  </div>
</PositioningPopup>
`;

exports[`<PositioningPopup /> renders correctly without props 1`] = `
<PositioningPopup>
  <div
    className="popup-wrap"
    style={
      Object {
        "left": 20,
        "top": "100%",
      }
    }
  >
    <Popup>
      <div
        className="popup"
      />
    </Popup>
  </div>
</PositioningPopup>
`;
